deploy/purser-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: purser-service
  namespace: hello-kubernetes
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: website
  sessionAffinity: None
  type: ClusterIP
