deploy/purser-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: purser-ingress
  namespace: hello-kubernetes
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: purser-service
            port:
              number: 80
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: purser-service
            port:
              number: 80
